--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,3 +45,7 @@ jobs:
         ./install.sh --accept-all-defaults
         echo "::add-path::/home/runner/bin"
         exec -l $SHELL
+        - name: 'Fix Config File Permissions'
+      run: |
+        oci setup repair-file-permissions --file /home/runner/.oci/config
+        oci setup repair-file-permissions --file /home/runner/.oci/key.pem
