--- a/.github/workflows/update ci.yml
+++ b/.github/workflows/update ci.yml
@@ -1,16 +1,16 @@
- branches: [ master ]
+ name: Java CI with Gradle
 
-jobs:
-  build:
+ on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
-    runs-on: ${{matrix.os}}
-    strategy: 
-      matrix: 
-       os: [ubuntu-latest, windows-latest, macOS-latest]
+ jobs:
   build-java:
 
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v2
 
@@ -18,15 +18,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
- 
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
     - name: Build with Gradle
       run: ./gradlew build
-    
-    - name: Build and Push docker image
 
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
@@ -34,6 +31,5 @@ jobs:
         image: nanajanashia/demo-app
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}   
         password: ${{ secrets.DOCKER_PASSWORD }}
 
