--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,7 @@ jobs:
          echo "region=${{secrets.OCI_REGION}}" >> ~/.oci/config
          echo "tenancy=${{secrets.OCI_TENANCY_OCID}}" >> ~/.oci/config
          echo "key_file=~/.oci/key.pem" >> ~/.oci/config
-         echo "${{secrets.OCI_KEY_FILE}}" >> ~/.oci/key.pem
+         echo "${{secrets.OCI_KEY_FILE}}" >> ~/.oci/oci_api_key.pem
          
       - name: 'Install OCI CLI'
         env:
@@ -62,8 +62,6 @@ jobs:
          oci setup repair-file-permissions --file /home/runner/.oci/key.pem
          
       - name: 'Download the KUBECONFIG'
-        env:
-         ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         run: |
          mkdir -p ~/.kube
          oci ce cluster create-kubeconfig --cluster-id ${{ secrets.OKE_OCID }} --file ~/.kube/config --region ${{secrets.OCI_REGION}} --token-version 2.0.0 
