--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,8 +39,8 @@ jobs:
          echo "fingerprint=${{secrets.OCI_FINGERPRINT}}" >> ~/.oci/config
          echo "region=${{secrets.OCI_REGION}}" >> ~/.oci/config
          echo "tenancy=${{secrets.OCI_TENANCY_OCID}}" >> ~/.oci/config
-         echo "key_file=~/.oci/key.pem" >> ~/.oci/config
-         echo "${{secrets.OCI_KEY_FILE}}" >>  ~/.oci/key.pem
+         echo "key_file=~/.oci/oci_api_key.pem" >> ~/.oci/config
+         echo "${{secrets.OCI_KEY_FILE}}" >>  ~/.oci/oci_api_key.pem
          
       - name: 'Install OCI CLI'
         env:
