--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,7 +55,7 @@ jobs:
       - name: 'Fix Config File Permissions'
         run: |
          oci setup repair-file-permissions --file /home/runner/.oci/config
-         oci setup repair-file-permissions --file /home/runner/.oci/key.pem
+         oci setup repair-file-permissions --file /home/runner/.oci/oci_api_key.pem
          
       - name: 'Download the KUBECONFIG'
         run: |
