--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+env:
+  IMAGE_NAME: waelhlali21/docker_push:tagname
+  DEPLOYMENT_NAME: dockrep
+  PORT: 5000 
 
 jobs:
 
