--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,5 +29,5 @@ jobs:
           username: nourch29
           password: ${{secrets.DOCKERHUB_PASS}}
           repository: nourch29/dockrep
-          tag_with_ref: true
-          
+          tags: latest
+        
