--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+env:
+  IMAGE_NAME: linuxserver/nginx
+  DEPLOYMENT_NAME: dockrep
+  PORT: 5000  
 
 jobs:
 
@@ -30,4 +35,30 @@ jobs:
           password: ${{secrets.DOCKERHUB_PASS}}
           repository: nourch29/dockrep
           tags: latest
+          
+      - name: 'Write Config & Key Files'
+        run: |
+         mkdir ~/.oci
+         echo "[DEFAULT]" >> ~/.oci/config
+         echo "user=${{secrets.OCI_USER_OCID}}" >> ~/.oci/config
+         echo "fingerprint=${{secrets.OCI_FINGERPRINT}}" >> ~/.oci/config
+         echo "region=${{secrets.OCI_REGION}}" >> ~/.oci/config
+         echo "tenancy=${{secrets.OCI_TENANCY_OCID}}" >> ~/.oci/config
+         echo "key_file=~/.oci/key.pem" >> ~/.oci/config
+         echo "${{secrets.OCI_KEY_FILE}}" >> ~/.oci/key.pem
+          
+      - name: 'Install OCI CLI'
+        env:
+         ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+        run: |
+         curl -L -O https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh
+         chmod +x install.sh
+         ./install.sh --accept-all-defaults
+         echo "::add-path::/home/runner/bin"
+         exec -l $SHELL
+     
+      - name: 'Fix Config File Permissions'
+        run: |
+         oci setup repair-file-permissions --file /home/runner/.oci/config
+         oci setup repair-file-permissions --file /home/runner/.oci/key.pem
         
