--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,10 +7,11 @@ on:
     branches: [ main ]
     
 env:
-  IMAGE_NAME: linuxserver/nginx
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+  IMAGE_NAME: linuxserver/nginx:latest
   DEPLOYMENT_NAME: dockrep
-  PORT: 5000  
-
+  PORT: 8080
+  
 jobs:
 
   build:
